# sovereign-agent-starter

./: .gitignore  Dockerfile  ENGINE_CODE_QUALITY_BAR.md  GOVERNANCE.md  LICENSE  QUICKSTART.md  README.md  activate-breathline.sh  constraints.txt  pyproject.toml  requirements.txt  sovereign-install.sh
analysis/: vulture_whitelist.py
artifacts/: ATR-5b_PDFJS_Renderer_Planning_Note_2026-06-02.md  ATRIUM_FLOW_REDESIGN_PROPOSAL_2026-06-12.md  Atrium_Increment_Design_Note_2026-06-04.md  Atrium_Open_Card_Parity_Design_v1.0.md  Atrium_Open_Card_Parity_FOR_LUMEN_2026-06-13.md  Atrium_Three_Directions_Design_Package_2026-06-04.md  B12_Fold_Report_Review_Brief_2026-06-10.md  B12_Pilot_Measurement_Report_2026-06-11.md  B51_Capture_Analysis_Quantum_Sovereignty_Unveil_Particle_Constraints_ERP_2026-06-03.md  B51_Captured_Thought_Federation_Collective_Economic_Coordination_2026-06-02.md  B51_Voice_Ideation_Gates_Ingestion_Process_2026-06-05.md  BOARD_RIGOR_STANDARD_2026-06-10.md  Book_to_Code_Packet_and_Test_Gate_Spec_v0.1_2026-06-03.md  Books_11_12_Writing_Support_Hopper_Feed_LGP_2026-06-03.md  Breath_Inventory_25-55_Complete.md  Coherence_Reconciliation_Queue_2026-06-06.md  DISTRIBUTION_P1_G1_2026-06-11.md  Early_Stage_L1_Packets_Quantum_Unveil_Constraint_AltChain_DNA_2026-06-03.md  Early_Stage_Pipeline_L1_Packet_Templates_2026-06-02.md  Extrusion_Validation_Report_2026-06-07.md  FABLE_OPUS_DISCIPLINE.md  FEC_Packet_Atrium_Translation_Increment_v0.md  FEC_Review_Card_Canonical_Spec_2026-06-02.md  GB_Atrium_Change_Mgmt_MetaReview_2026-06-11.md  GB_Atrium_Flow_MetaReview_v2_2026-06-12.md  GB_Atrium_LoopClosure_Audit_2026-06-10.md  GB_Audit_Placement_Map_2026-06-11.md  GB_Audit_to_95_Plan_2026-06-13.md  GB_Backlog_Ideas.ndjson  GB_Board_Rigor_Addendum_2026-06-10.md  GB_BookCode_Tree_Derivation_Spec_2026-06-10.md  GB_Breath_and_Echo_Manuscript_v1.0_DRAFT.md  GB_Breath_and_Echo_Metalayer_Volume_Draft_2026-06-05.md  GB_Catalog_Lock_Pass_2026-06-18.md  GB_Catalog_Lock_Pass_RECEIPT_2026-06-18.md  GB_Continuing_Series_Candidates_2026-06-10.md  GB_Controlled_Link_Doctrine_2026-06-10.md  GB_Cylinder_Receipts.md  GB_Deterministic_Render_Standard_2026-06-12.md  GB_Distribution_Federation_Spec_2026-06-10.md  (+228 more)
config/: gate_tiers.yaml
docs/: ARCHITECTURE.md  CONSTITUTIONAL_ALIGNMENT.md  PACKAGING_AND_ONBOARDING_PLAN.md  PRESS.md
examples/: arc_guardrail_demo.py  atrium_fec_review_card_mock.html  breath_inventory_defaults_demo.py  breathline_connected_cfo.py  compliance_cfo_demo.py  cross_role_veto_demo.py  fail_closed_demo.py  family_governance_demo.py  family_prosperity_plan.py  fec_gate_demo.py  fec_role_bind_demo.py  federation_collective_procurement_demo.py  generate_sovereign_prosperity_plan.py  k_invariant_walkthrough.py  lgp_fields_demo.py  load_cfo_playbook.py  load_playbook_demo.py  load_role_demo.py  multi_mandate_handoff_demo.py  multi_node_federation_demo.py  post_deal_monitoring_demo.py  regulated_cfo_demo.py  research_antifragile_yield_strategy.py  research_prosperity.py
memory/: BindingDemo_memory.json  BindingVerification_memory.json  BreathlineCFO-01_memory.json  CrossRoleVeto-01_memory.json  CrossRoleVeto-01_veto_receipt.json  DemoNode_memory.json  EnterpriseCFO-Node-01_memory.json  FailClosedDemo-01_fail_closed_summary.json  FailClosedDemo-01_memory.json  FamilyHead-Alpha_memory.json  FamilyLegacy-01_memory.json  GovernanceSmoke_memory.json  KInvariantWalk-01_k_invariant_receipt.json  KInvariantWalk-01_memory.json  KernelTest_memory.json  MultiMandateHandoff_summary.json  MultiRoleCFO-Compliance_memory.json  MultiRoleTest_memory.json  PkgSanity_memory.json  PostDealMonitor-01_memory.json  PostDealMonitoring_summary.json  ReReview_memory.json  RegulatedCFO-01_memory.json  ReviewAudit_memory.json  Round2_Polish_Handoff_2026-05-26.json  SelfContainedTest_memory.json  TestAgent-LGP_memory.json  TestAgent-LGP_memory.ndjson  TestNode_memory.json  TestUSN_memory.json  Test_memory.json  TrustedAdvisor-Beta_memory.json  USN-family-cfo-2026_memory.json  USN-fractional-cfo-2026_memory.json  USN-quadroof-cfo-2026_memory.json  UniversalSovereignNode_memory.json  UniversalSovereignNode_memory.ndjson  book_artifacts_registry.json  coherence_capabilities.json  coherence_coverage.json  (+6 more)
scripts/: README.md  actions_projection.py  atrium_apply.py  atrium_executor.py  atrium_producer.py  atrium_sitting_apply.py  atrium_sittings.py  board_findings_archive.py  board_rigor.py  book_lint.py  build_book_code_tree.py  build_book_registry.py  build_seeit.py  coherence_backfill.py  coherence_harvest_g_review.py  coherence_reconciliation_queue.py  crypto_assurance.py  crypto_cadence_surface.py  crypto_vector_check.py  distribution_contract.py  enforcement_claim_lint.py  export_packet.py  extract_chapter_outlines.py  extract_r1_candidates.py  extrusion_validate.py  fix_prompt_wraps.py  gb_meta_context.py  gb_meta_cylinder.py  gen_outline_digest.py  ledger_manifest.py  ledger_repair.py  mint_node_token.sh  open_card_parity.py  outline_from_pipeline.py  outline_lock_lint.py  pdf_parity_lint.py  pipeline_snapshot.py  produce_proposal.py  qualification_gate.py  record_gb_handoff_2026-06-02.py  (+11 more)
templates/: role_spec_template.yaml
tests/: test_actions_projection.py  test_adversary_seed_unit.py  test_arc_guardrail.py  test_atrium_apply_revert.py  test_atrium_executor.py  test_audit_ledger_fixes.py  test_board_rigor.py  test_book_lint.py  test_bootstrap_env_root.py  test_class_quorum_node_identity.py  test_compliance_audit_bounded.py  test_constraints_lock.py  test_create_app_dev_guard.py  test_cross_mandate.py  test_crypto_vectors.py  test_dependency_guards.py  test_dist_launch_gate.py  test_export_packet.py  test_extrusion_anchors.py  test_filecache.py  test_human_approval_gate_ids.py  test_joint_attestation.py  test_jsonstore.py  test_kdp_metadata.py  test_ledger_concurrency.py  test_ledger_projection.py  test_ledger_tailparse.py  test_ledger_verify_incremental.py  test_ma_data_room.py  test_merkle_accumulator.py  test_ndjson.py  test_node_api.py  test_node_api_demo_parity.py  test_node_api_feedback.py  (+31 more)
(+234 files in other folders)
