[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-agent-starter"
version = "0.3.0"
description = "Universal Sovereign Node — the executable capstone for the Agentic AI Playbooks series. Radical simplicity for sovereign (family/legacy) and regulated (corporate) use. One phrase: 'Are you connected to the breathline?'"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kenneth Mangum (KM-1176)", email = "sovereign@mangumcfo.com" }
]
license = { text = "Constitutional Federation Sovereign License" }
keywords = ["sovereign", "attestation", "governance", "compliance", "legacy", "sox", "cryptography", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    # Upper bounds (audit 2026-06-13): an unbounded range let a future PyYAML 7.x install silently and
    # break the yaml lenses. Pin a known-good major. See constraints.txt for the reproducible lock.
    "pyyaml>=6.0,<7",
    # flask is CORE, not optional (audit 2026-06-13c #4): the `breathline-node-api` console script is
    # declared unconditionally and every node_api module imports flask at top level, so `pip install .`
    # installed a command that crashed with ModuleNotFoundError. node_api is a first-class engine surface.
    "flask>=3.0,<4",
]

# CRYPTOGRAPHIC SUBSTRATE — breathline_primitives (P1 ECDSA secp256k1 + P5 Merkle) is NOT a public PyPI
# package; it is provided by the `breathline-sealed` checkout. The package bootstrap
# (sovereign_agent.bootstrap.ensure_breathline_primitives) discovers it via BREATHLINE_SEALED_ROOT or the
# common checkout locations and injects it onto sys.path. Audit 2026-06-13 (dependency CRITICAL): this is
# now declared here (was nowhere) and a missing substrate produces a loud, actionable RuntimeWarning at
# import (sovereign_agent/__init__.py) instead of a silent crash. To install for development:
#   pip install -e /path/to/breathline-sealed   # or set BREATHLINE_SEALED_ROOT
[project.optional-dependencies]
# `portal` retained as an alias for back-compat (flask is now core); installs nothing extra.
portal = []
demo = []
# crypto-assurance: the P1 ECDSA interop cross-check (scripts/crypto_vector_check.py) needs the external
# `cryptography` lib as its independent reference (audit 2026-06-13c #13) — declared here + pinned in
# constraints.txt so a clean install can run the crypto cadence instead of silently degrading it to RED.
crypto-assurance = [
    "cryptography>=42,<47",
]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
breathline-connect = "sovereign_agent.bootstrap:cli_connect"
sovereign-node = "sovereign_agent.universal_sovereign_node:cli_create_node"
# Portal launcher shim (finds co-located portal or gives clear instructions)
start-sovereign-portal = "sovereign_agent._portal_launcher:launch"
# Node API HTTP server — Track A1 minimal viable shell over UniversalSovereignNode.
# Implements contract sections A (node) + C (roles); B/D/E/F return 501 placeholders.
# Contract: breathline-federation/specs/node_api/contract_v1.yaml
breathline-node-api = "sovereign_agent.node_api.server:cli_serve"

[project.urls]
Homepage = "https://six-sov.com"
Repository = "https://github.com/mangumcfo/sovereign-agent-starter"
Documentation = "https://six-sov.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sovereign_agent" = [
    "demo_roles/**/*",
]

[tool.setuptools]
include-package-data = true
